--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
+    "prettier-eslint": "^9.0.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
