--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-sslify": "^1.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "serialize-javascript": "^3.0.0",
     "serve-favicon": "^2.5.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "styled-system": "^5.1.5"
   },
   "eslintConfig": {
     "extends": "react-app"
