--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@babel/register": "^7.9.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cross-fetch": "^3.0.4",
+    "date-fns": "^2.12.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-sslify": "^1.2.0",
