--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "serialize-javascript": "^3.0.0",
     "serve-favicon": "^2.5.0",
     "styled-components": "^5.1.0",
+    "styled-reset": "^4.1.3",
     "styled-system": "^5.1.5"
   },
   "eslintConfig": {
