--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Harminder",
   "license": "MIT",
   "scripts": {
-    "start": "yarn build && node index.js",
-    "build": "webpack --config webpack.config.js",
+    "start": "node ./build/server.js",
+    "build": "webpack --config webpack.config.js --mode=production",
     "dev:build-server": "cross-env NODE_ENV=development webpack --config webpack.config.js --mode=development -w",
     "dev:start": "nodemon ./build/server.js",
     "dev": "npm-run-all --parallel dev:*"
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "@babel/register": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cross-fetch": "^3.0.4",
