--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node ./build/server.js",
     "build": "webpack --config webpack.config.js --mode=production",
-    "dev:build-server": "cross-env NODE_ENV=development webpack --config webpack.config.js --mode=development -w",
+    "dev:build-server": "webpack --config webpack.config.js --mode=development -w",
     "dev:start": "nodemon ./build/server.js",
     "dev": "npm-run-all --parallel dev:*"
   },
@@ -19,7 +19,6 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
-    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-html": "^6.0.2",
@@ -50,7 +49,8 @@
     "serve-favicon": "^2.5.0",
     "styled-components": "^5.1.0",
     "styled-reset": "^4.1.3",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "workbox-webpack-plugin": "^5.1.2"
   },
   "eslintConfig": {
     "extends": "react-app"
