--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "webpack --config webpack.config.js --mode=production",
     "dev:build-server": "webpack --config webpack.config.js --mode=development -w",
     "dev:start": "nodemon ./build/server.js",
-    "dev": "npm-run-all --parallel dev:*"
+    "dev": "npm-run-all --parallel dev:*",
+    "test": "jest",
+    "eslint": "eslint src/ --ext .js"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -18,15 +20,19 @@
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
+    "jest": "^25.3.0",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "prettier-eslint": "^9.0.1",
+    "react-test-renderer": "^16.13.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
