--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:start": "nodemon ./build/server.js",
     "dev": "npm-run-all --parallel dev:*",
     "test": "jest",
-    "eslint": "eslint src/ --ext .js"
+    "eslint": "eslint src/ --ext .js",
+    "test:build": "yarn eslint && yarn test && yarn build"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
