--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "start": "node ./build/server.js",
     "eslint": "eslint src/ --ext .js",
     "clean": "shx rm -rf build",
-    "dev:webpack": "webpack --config webpack.config.js --mode=development -w",
+    "dev:webpack": "webpack --config webpack.config.babel.js --mode=development -w",
     "dev:start": "nodemon ./build/server.js",
     "test:build": "run-s eslint test build",
     "static:copy": "shx cp -r 'src/static' build",
-    "prod:webpack": "webpack --config webpack.config.js --mode=production"
+    "prod:webpack": "webpack --config webpack.config.babel.js --mode=production"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -37,6 +37,7 @@
     "npm-run-all": "^4.1.5",
     "prettier-eslint": "^9.0.1",
     "react-test-renderer": "^16.13.1",
+    "regexparam": "^1.3.0",
     "shx": "^0.3.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
