--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: node_js
+addons:
+  chrome: stable
 node_js: '10'
+before_install:
+  - npm install -g @lhci/cli@0.3.x
 script:
   - yarn test:build
+  - lhci autorun # run lighthouse CI
