--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - npm install -g @lhci/cli@0.3.x
 script:
   - yarn test:build
-  - lhci autorun # run lighthouse CI
+  - lhci autorun --collect.startServerCommand="yarn start" --collect.url="http://localhost:9002/" # run lighthouse CI
