Feature/add lighthouse ci (#15)
* Added lighthouse CI ✨ 

Co-authored-by: Harminder Pal Singh <harminderpal.singh@publicissapient.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: node_js
+addons:
+  chrome: stable
 node_js: '10'
+before_install:
+  - npm install -g @lhci/cli@0.3.x
 script:
   - yarn test:build
+  - lhci autorun --collect.startServerCommand="yarn start" --collect.url="http://localhost:9002/" # run lighthouse CI
