added service hooks and tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -44,5 +44,10 @@
     "__DEV__": true
   },
   "plugins": ["jest", "prettier"],
-  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"]
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "prettier",
+    "plugin:react-hooks/recommended"
+  ]
 }
